[package]
name = "hotpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
gpx = "0.9.1"
fitparser = "0.6.1"
flate2 = "1.0.27"
geo-types = "0.7.11"
rayon = "1.7.0"
walkdir = "2.4.0"
anyhow = "1.0.75"
derive_more = "0.99.17"
byteorder = "1.4.3"
line_drawing = "1.0.0"
