[package]
name = "hotpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "headers"] }
byteorder = "1.4.3"
clap = { version = "4.4.5", features = ["derive"] }
derive_more = "0.99.17"
fitparser = "0.6.1"
flate2 = "1.0.27"
geo = "0.26.0"
geo-types = "0.7.11"
gpx = "0.9.1"
image = "0.24.7"
line_drawing = "1.0.0"
once_cell = "1.18.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rayon = "1.7.0"
rusqlite = "0.29.0"
serde = "1.0.188"
time = { version = "0.3.29", features = ["parsing", "serde-well-known"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
walkdir = "2.4.0"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37", features = [] }
